--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
@@ -32,6 +32,20 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @if (TempData["StatusMessage"] != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show">
+                    @TempData["StatusMessage"]
+                            
+                </div>
+            }
+            @if (TempData["StatusMessageDanger"] != null)
+            {
+                <div class="alert alert-danger alert-dismissible fade show">
+                    @TempData["StatusMessageDanger"]
+                            
+                </div>
+            }
             @RenderBody()
         </main>
     </div>
