--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
@@ -9,7 +9,10 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+	background-color: #161b22;
+	font-family: "muli", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .top-row {
