--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+<div class="top-row py-3 navbar navbar-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="">Insightify.SPA</a>
+		<a class="navbar-brand" href="">Insightify</a>
 		<button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -11,118 +12,57 @@
 	<nav class="flex-column">
 		<section>
 			<!-- Search bar -->
-			<div class="nav-item px-3">
-				<input type="text" class="form-control" placeholder="Search">
-			</div>
+			
 
 			<!-- Main navigation -->
 			<h5 class="nav-title">Main</h5>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="#">
+			<div class="nav-item px-1">
+				<NavLink class="nav-link fs-6 px-2" href="#">
 					<span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
 				</NavLink>
 			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="#">
+			<div class="nav-item px-1">
+				<NavLink class="nav-link fs-6 px-2" href="#">
 					<span class="oi oi-people" aria-hidden="true"></span> Friends
 				</NavLink>
 			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="#">
+			<div class="nav-item px-1">
+				<NavLink class="nav-link fs-6 px-2" href="#">
 					<span class="oi oi-globe" aria-hidden="true"></span> News
 				</NavLink>
 			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="#">
+			<div class="nav-item px-1">
+				<NavLink class="nav-link fs-6 px-2" href="#">
 					<span class="oi oi-graph" aria-hidden="true"></span> Crypto Wave
 				</NavLink>
 			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="#">
+			<div class="nav-item px-1">
+				<NavLink class="nav-link fs-6 px-2" href="#">
 					<span class="oi oi-dollar" aria-hidden="true"></span> Wallet
 				</NavLink>
 			</div>
 
 			<!-- Direct messages -->
 			<h5 class="nav-title">Direct Messages</h5>
-			@*<div class="nav-item px-3">
-			<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-			<span class="profile-picture">
-			<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-			<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-			</span>
-			<div class="message-content">
-			<span class="message-sender">John Doe</span>
-			</div>
-			</NavLink>
-			</div>
-			<div class="nav-item px-3">
-			<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-			<span class="profile-picture">
-			<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-			<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-			</span>
-			<div class="message-content">
-			<span class="message-sender">John Doe</span>
-			</div>
-			</NavLink>
-			</div>
-			<div class="nav-item px-3">
-			<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-			<span class="profile-picture">
-			<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-			<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-			</span>
-			<div class="message-content">
-			<span class="message-sender">John Doe</span>
-			</div>
-			</NavLink>
-			</div>*@
-			<div class="nav-item px-3">
-				<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-					<span class="profile-picture">
-						<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-						<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-					</span>
-					<div class="message-content">
-						<div class="text">
-							<div class="header">
-								<p class="message-sender active">John Doe </p>
-								<span class="message-time active">12:45 PM</span>
-							</div>
-							<p class="message-content active">Kurwa bo...</p>
-						</div>
-					</div>
-				</NavLink>
-			</div>@*
-			<div class="nav-item px-3">
-			<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-			<span class="profile-picture">
-			<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-			<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-			</span>
-			<div class="message-content">
-			<span class="message-sender">John Doe</span>
-			</div>
-			</NavLink>
-			</div>*@
-			<span class="view-all-btn">View all</span>
+            <div class="nav-item px-3">
+                <NavLink style="text-decoration: none;" class="direct-message-item" href="#">
+                    <span class="profile-picture">
+                        <img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
+                        <span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
+                    </span>
+                    <div class="message-content">
+                        <p class="message-element">
+                            John Doe
+                        </p>
+                    </div>
+                </NavLink>
+            </div>
+            <div class="container d-flex flex-row justify-content-start p-3">
+                <span class="d-block w-25 view-all-btn">View all</span>
+            </div>
+            
 		</section>
-		<section>
-			<!-- Profile section -->
-			<div class="nav-item px-3">
-				<NavLink style="text-decoration: none;" class="direct-message-item" href="#">
-					<span class="profile-picture">
-						<img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-						<span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
-					</span>
-					<div class="message-content">
-						<span class="message-sender">Joe Mama</span>
-					</div>
-				</NavLink>
-			</div>
-		</section>
-	</nav>
+    </nav>
 </div>
 
 @code {
