--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor.css
@@ -1,7 +1,15 @@
 .page {
+	background-color: #f3f2f7;
+}
+
+
+.page {
     position: relative;
     display: flex;
     flex-direction: column;
+}
+article {
+	padding: 32px 72px;
 }
 
 main {
@@ -9,49 +17,14 @@ main {
 }
 
 .sidebar {
-	background-color: #161b22;
-	font-family: "muli", sans-serif;
+    background-color: #f8f7fa;
+    font-family: "muli", sans-serif;
     font-weight: 400;
     font-style: normal;
+	margin: 16px;
+	border-radius: 24px;
 }
 
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
-
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
-    }
-}
 
 @media (min-width: 641px) {
     .page {
@@ -65,20 +38,4 @@ main {
         top: 0;
     }
 
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
 }
