--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿
-<div class="top-row py-3 navbar navbar-dark">
+﻿@inject NavigationManager Navigation
+<div class="top-row navbar navbar-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="">Insightify</a>
 		<button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -17,7 +17,7 @@
 			<!-- Main navigation -->
 			<h5 class="nav-title">Main</h5>
 			<div class="nav-item px-1">
-				<NavLink class="nav-link fs-6 px-2" href="#">
+				<NavLink class="nav-link fs-6 px-2">
 					<span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
 				</NavLink>
 			</div>
@@ -27,7 +27,7 @@
 				</NavLink>
 			</div>
 			<div class="nav-item px-1">
-				<NavLink class="nav-link fs-6 px-2" href="#">
+				<NavLink class="nav-link fs-6 px-2" @onclick="NavigateToNewsComponent">
 					<span class="oi oi-globe" aria-hidden="true"></span> News
 				</NavLink>
 			</div>
@@ -80,4 +80,8 @@
 	{
 		showProfileMenu = !showProfileMenu;
 	}
+    private void NavigateToNewsComponent()
+    {
+        Navigation.NavigateTo("news");
+    }
 }
