font awsome icons

--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
@@ -16,29 +16,29 @@
 
 			<!-- Main navigation -->
 			<h5 class="nav-title">Main</h5>
-			<div class="nav-item px-1">
+			<div class="nav-item px-1 hover">
 				<NavLink class="nav-link fs-6 px-2">
-					<span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
+					<span class="oi fa-solid fa-gauge" aria-hidden="true"></span> Dashboard
 				</NavLink>
 			</div>
-			<div class="nav-item px-1">
+			<div class="nav-item px-1 hover">
 				<NavLink class="nav-link fs-6 px-2" href="#">
-					<span class="oi oi-people" aria-hidden="true"></span> Friends
+					<span class="oi fa-solid fa-user-group" aria-hidden="true"></span> Friends
 				</NavLink>
 			</div>
-			<div class="nav-item px-1">
+			<div class="nav-item px-1 hover">
 				<NavLink class="nav-link fs-6 px-2" @onclick="NavigateToNewsComponent">
-					<span class="oi oi-globe" aria-hidden="true"></span> News
+					<span class="oi fa-solid fa-newspaper" aria-hidden="true"></span> News
 				</NavLink>
 			</div>
-			<div class="nav-item px-1">
+			<div class="nav-item px-1 hover">
 				<NavLink class="nav-link fs-6 px-2" href="#">
-					<span class="oi oi-graph" aria-hidden="true"></span> Crypto Wave
+					<span class="oi fa-solid fa-chart-simple" aria-hidden="true"></span> Crypto Wave
 				</NavLink>
 			</div>
-			<div class="nav-item px-1">
+			<div class="nav-item px-1 hover">
 				<NavLink class="nav-link fs-6 px-2" href="#">
-					<span class="oi oi-dollar" aria-hidden="true"></span> Wallet
+					<span class="oi fa-solid fa-wallet" aria-hidden="true"></span> Wallet
 				</NavLink>
 			</div>
 
