not working identity

--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/_Imports.razor
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Insightify.SPA
 @using Insightify.SPA.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+
