--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Pages/Index.razor
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/Pages/Index.razor
@@ -1,9 +1,23 @@
 ﻿@page "/"
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<p>
+    @state.User.Identity.IsAuthenticated
+</p>
+@foreach (var item in state.User.Claims)
+{
+    <p>@item.Issuer</p>
+    <p>@item.Value</p>
+    <p>@item.Properties.FirstOrDefault()</p>
+}
 
-Welcome to your new app.
+@code {
+    AuthenticationState state;
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    protected override async Task OnInitializedAsync()
+    {
+        state = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+    }
+}
