It works! Asking what? Its simple - the login works!!!

--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor
@@ -47,8 +47,8 @@
             <div class="nav-item px-3">
                 <NavLink style="text-decoration: none;" class="direct-message-item" href="#">
                     <span class="profile-picture">
-                        <img class="profile-picture-image" src="/images/ey5szvew8acsw2m.jpg" alt="pfp">
-                        <span class="activity-status"><img class="status-image" src="/images/status-active-icon-2048x2048-2pgmrqod.png" alt="sts"></span>
+                        <img class="profile-picture-image" src="/kur.jpg" alt="pfp">
+                        <span class="activity-status"><img class="status-image" src="/green.png" alt="sts"></span>
                     </span>
                     <div class="message-content">
                         <p class="message-element">
