--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor.css
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/NavMenu.razor.css
@@ -43,8 +43,6 @@
         line-height: 3rem;
     }
 
-
-
     .nav-item ::deep a:hover {
         background-color: #ecdff5;
         color: #ad5adc;
@@ -63,7 +61,6 @@
 .oi {
 	margin-right: 3px;
 	margin-left: 6px;
-    margin-top: 3%;
 }
 
 .profile-picture {
@@ -133,14 +130,20 @@ p {
         background-color: rgba(255,255,255,0.1);
 	    color: #ad5adc;
     }
+
+.space-between {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: space-between;
+    height: 890px;
+    padding: 15px;
+}
+
 @media (min-width: 641px) {
-	.navbar-toggler {
+    .navbar-toggler {
 		display: none;
 	}
-	.collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
     
     .nav-scrollable {
         /* Allow sidebar to scroll for tall menus */
