--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager navigationManager
+@inject IJSRuntime JsRuntime
 
 <div class="page">
     <div class="sidebar">
@@ -6,9 +8,12 @@
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <div class="top-row px-4 auth @headerClass">
+            <div><h3 class="h3-title">@navigationManager.Uri.Remove(0, navigationManager.BaseUri.Count()).ToUpper()</h3></div>
+            <div>
+                <LoginDisplay />
+                <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            </div>
         </div>
 
         <article class="content px-4">
@@ -16,3 +21,36 @@
         </article>
     </main>
 </div>
+
+@code {
+    private ElementReference header;
+    private string headerClass = "";
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            var dotNetRef = DotNetObjectReference.Create(this);
+            await JsRuntime.InvokeVoidAsync("addScrollListener", dotNetRef);
+        }
+    }
+
+    [JSInvokable]
+    public void MakeHeaderSticky()
+    {
+        headerClass = "sticky-header";
+        StateHasChanged();
+    }
+
+    [JSInvokable]
+    public void MakeHeaderUnSticky()
+    {
+        headerClass = "";
+        StateHasChanged();
+    }
+
+    public void Dispose()
+    {
+        JsRuntime.InvokeVoidAsync("removeScrollListener");
+    }
+}
