--- a/src/Web/Insightify.SPA/Insightify.SPA/Pages/Dashboard.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Pages/Dashboard.razor
@@ -5,33 +5,77 @@
 <div class="flexbox">
     <section class="single-cards">
         <div class="crypto-card card">
-            kokos
+            <div class="top-area">
+                <div class="image-container">
+                    <img src="/images/crypto/bitcoin.png" />
+                </div>
+                <button>kys aaa</button>
+            </div>
+            <div class="bottom-area">
+                <h5>Bitcoin</h5>
+                <div class="price-holder">
+                    <h4>$48,789.50</h4>
+                    <h7>-0.58$ ></h7>
+                </div>
+            </div>
         </div>
         <div class="crypto-card card">
-            kokos
+            <div class="top-area">
+                <div class="image-container">
+                    <img src="/images/crypto/ethereum.png" />
+                </div>
+                <button>kys aaa</button>
+            </div>
+            <div class="bottom-area">
+                <h5>Ethereum</h5>
+                <div class="price-holder">
+                    <h4>$48,789.50</h4>
+                    <h7>-0.58$ ></h7>
+                </div>
+            </div>
         </div>
         <div class="crypto-card card">
-            kokos
+            <div class="top-area">
+                <div class="image-container">
+                    <img src="/images/crypto/solana.png" />
+                </div>
+                <button>kys aaa</button>
+            </div>
+            <div class="bottom-area">
+                <h5>Solana</h5>
+                <div class="price-holder">
+                    <h4>$48,789.50</h4>
+                    <h7>-0.58$ ></h7>
+                </div>
+            </div>
         </div>
         <div class="crypto-card card">
-            kokos
+            <div class="top-area">
+                <div class="image-container">
+                    <img src="/images/crypto/stellar.png" />
+                </div>
+                <button>kys aaa</button>
+            </div>
+            <div class="bottom-area">
+                <h5>Stellar</h5>
+                <div class="price-holder">
+                    <h4>$48,789.50</h4>
+                    <h7>-0.58$ ></h7>
+                </div>
+            </div>
         </div>
     </section>
     <section class="chart-cards">
         <section class="price-cards">
-            <div class="price-card card">
-                cena
+            <div id="price-card" class="price-card card">
             </div>
-            <div class="change-card card">
-                change
+            <div id="change-card" class="change-card card">
             </div>
         </section>
         <section class="market-cards">
-            <div class="status-card card">
-                status
+            <div id="status-card" class="status-card card">
             </div>
-            <div class="analytics-card card">
-                analytics
+            <div id="analytics-card" class="analytics-card card">
             </div>
         </section>
     </section>
