--- a/src/Web/Insightify.SPA/Insightify.SPA/Shared/LoginDisplay.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Shared/LoginDisplay.razor
@@ -4,8 +4,22 @@
 
 <AuthorizeView>
     <Authorized>
-        Hello, @context.User.Identity?.Name!
-        <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
+        <div class="auth-menu">
+            <a class="account-menu">
+                <img class="profile-picture" src="images/patrik.png"/>
+                <p class="username">@context.User.Identity?.Name</p>
+                <button class="dropdown-btn" @onclick="OpenCloseDropdown"><i class="fa-solid fa-caret-down"></i></button>
+            </a>
+            <div class="dropdown" style="@(isDropdownVisible ? "display:block" : "display:none")">
+                <div class="dropdown-content">
+                    <a class="item">Logout</a>
+                    <a class="item">Logout</a>
+                    <a class="item">Logout</a>
+                    <a class="item">Logout</a>
+                </div>
+            </div>
+        </div>
+        
     </Authorized>
     <NotAuthorized>
         <a href="authentication/login">Log in</a>
