top bar changes

--- a/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Pages/Crypto.razor
@@ -1,16 +1,26 @@
 ﻿@page "/crypto"
 <section class="top">
     <div class="info">
-        <img class="image" src="/images/bitcoin.png" />
+        <img class="image" src="/images/bitcoin.png"/>
         <div class="basic-info">
             <h1 class="name">BitCoin</h1>
             <h2 class="price">26000 USD</h2>
         </div>
     </div>
     <div class="data">
-        <p class="market-cap">507212634614.3793</p>
-        <p class="24h-vol">7866014689.824344</p>
-        <p class="24h-change">-0.14</p>
+        <div class="market-cap">
+            <p class="name">Market Cap</p>
+            <p class="value">507212634614.3793</p>
+        </div>
+        <div class="day-vol">
+            <p class="name">24h Volume</p>
+            <p class="value">7866014689.824344</p>
+        </div>
+        <div class="day-change">
+            <p class="name">24h Change</p>
+
+            <p class="value">-0.14</p>
+        </div>
     </div>
 </section>
 <section class="chart">
