--- a/src/Web/Insightify.SPA/Insightify.SPA/Pages/Dashboard.razor
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Pages/Dashboard.razor
@@ -1,6 +1,6 @@
 ﻿@page "/dashboard"
 @using Microsoft.AspNetCore.Authorization;
-@attribute [Authorize]
+@attribute [AllowAnonymous]
 
 <div class="flexbox">
     <section class="single-cards">
