--- a/src/Web/Insightify.SPA/Insightify.SPA/wwwroot/css/app.css
+++ b/src/Web/Insightify.SPA/Insightify.SPA/wwwroot/css/app.css
@@ -1,6 +1,7 @@
 -@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
+    overflow:hidden;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
